testsuite/tests/typecheck/should_fail/T16646Fail.stderr

T16646Fail.hs:16:5: error:
    Invalid instantiation of ‘magicDict’ at type: (dt => r) -> st -> r

T16646Fail.hs:22:5: error:
    Invalid instantiation of ‘magicDict’ at type:
        (C a => r) -> Maybe a -> r

T16646Fail.hs:28:13: error:
    Invalid instantiation of ‘magicDict’ at type:
        (Reifies Any a => Proxy Any -> r) -> (Any -> a) -> Proxy Any -> r
